# Cric-Stats-Analytics

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml
data/: ind_inning4_over96_aus_vs_ind_gabba_test.json
models/: raw_data_models.py
notebooks/: scorecard_visualisation.ipynb
src/: extract_data.py  prepare_data.py  scorecard_analysis.py
tests/: test_extract_data.py  test_prepare_data.py  test_scorecard_analysis.py
